@@ -3,21 +3,59 @@ version = 0.0103
 author  = Kent Fredric <kentnl@cpan.org>
 license = Perl_5
 copyright_holder = Kent Fredric
-abstract = Extract Raw Chunks of data from identifiable ELF Sections
-root = ../ELF/
+;abstract = Extract Raw Chunks of data from identifiable ELF Sections
 
 [AllFiles]
-
-[Manifest]
-
-[ManifestSkip]
-
-[ReadmeFromPod]
-
 [PruneCruft]
 
 [MetaResources]
-
-[MetaTests]
+repository = git://github.com/kentfredric/ELF-Extract-Sections.git
 
 [License]
+
+[PkgVersion]
+
+[PodPurler]
+
+[ReadmeFromPod]
+
+[MetaYAML]
+[MetaJSON]
+
+[MetaProvides::Class]
+[MetaProvides::Package]
+
+[MakeMaker]
+[ModuleBuild]
+
+[ManifestSkip]
+
+[Manifest]
+
+[MetaTests]
+[PodTests]
+[ExtraTests]
+
+[NextRelease]
+
+[UploadToCPAN]
+
+[Prereq]
+Log::Log4perl              = 1.21
+Moose                      = 0.76
+Moose::Role                = 0
+MooseX::Declare            = 0.20
+MooseX::Has::Sugar         = 0.0300
+MooseX::Log::Log4perl      = 0.31
+MooseX::Types              = 0
+MooseX::Types::Moose       = 0.10
+MooseX::Types::Path::Class = 0.05
+overload                   = 0
+;[PkgSuggests]
+lib              = 0
+;[TestRequires]
+FindBin          = 0
+Test::More       = 0
+Path::Class      = 0
+YAML::XS         = 0
+File::Find::Rule = 0
