@@ -1,9 +1,12 @@
+package ELF::Extract::Sections::Section;
+
+# ABSTRACT:  An Objective reference to a section in an ELF file.
+
 use strict;
 use warnings;
 use MooseX::Declare;
 
 class ELF::Extract::Sections::Section {
-    our $VERSION = '0.0103';
     use MooseX::Has::Sugar 0.0300;
     use MooseX::Types::Moose                ( ':all', );
     use ELF::Extract::Sections::Meta::Types ( ':all', );
@@ -16,19 +19,14 @@ class ELF::Extract::Sections::Section {
     has offset => ( isa => Int,  ro, required );
     has size   => ( isa => Int,  ro, required );
 
-    #<<<
     method to_string ( Any $other?, Bool $polarity? ) {
-    #>>>
-              return sprintf(
-                  qq{[ Section %s of size %s in %s @ %x to %x ]},
-                  $self->name, $self->size, $self->source, $self->offset, $self->offset + $self->size,
-              );
+        return sprintf(
+            qq{[ Section %s of size %s in %s @ %x to %x ]},
+            $self->name, $self->size, $self->source, $self->offset, $self->offset + $self->size,
+            );
+    };
 
-        };
-
-    #<<<
     method compare ( ELF::Extract::Sections::Section :$other! , FilterField :$field! ){
-    #>>>
         if ( $field eq 'name' ) {
             return ( $self->name cmp $other->name );
         }
@@ -41,16 +39,14 @@ class ELF::Extract::Sections::Section {
         return undef;
     };
 
-    #<<<
     method write_to( File :$file does coerce  ){
-    #>>>
         my $fh = $self->source->openr;
-          seek( $fh, $self->offset, 0 );
-          my $output     = $file->openw;
-          my $chunksize  = 1024;
-          my $bytes_left = $self->size;
-          my $chunk      = ( $bytes_left < $chunksize ) ? $bytes_left : $chunksize;
-          while ( read( $fh, my $buffer, $chunk ) ) {
+        seek( $fh, $self->offset, 0 );
+        my $output     = $file->openw;
+        my $chunksize  = 1024;
+        my $bytes_left = $self->size;
+        my $chunk      = ( $bytes_left < $chunksize ) ? $bytes_left : $chunksize;
+        while ( read( $fh, my $buffer, $chunk ) ) {
             print {$output} $buffer;
             $bytes_left -= $chunksize;
             $chunk = ( $bytes_left < $chunksize ) ? $bytes_left : $chunksize;
@@ -58,9 +54,7 @@ class ELF::Extract::Sections::Section {
         return 1;
     };
 
-    #<<<
     method contents {
-    #>>>
         my $fh = $self->source->openr;
         seek( $fh, $self->offset, 0 );
         my $b;
@@ -72,14 +66,6 @@ class ELF::Extract::Sections::Section {
 1;
 
 __END__
-
-=head1 NAME
-
-ELF::Extract::Sections::Section - An Objective reference to a section in an ELF file.
-
-=head1 VERSION
-
-version 0.0103
 
 =head1 Description
 
